[package]
name = "setter"
version = "0.5.0"
edition = "2021"
authors = ["Umang Surana <no1umang@gmail.com>"]
description = "A simple configurating tool"
readme = "README.md"
homepage = "https://github.com/TeenCoder159/setter"
repository = "https://github.com/TeenCoder159/setter"
license = "MIT"

[dependencies]